--- a/Data_science/Titanic_data/Decision_Tree.ipynb
+++ b/Data_science/Titanic_data/Decision_Tree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "np.float64(0.8271604938271605)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,6 +327,114 @@
    "source": [
     "a = np.array([1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1])\n",
     "print(type(np.bincount(a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# 예시 데이터 생성\n",
+    "X, y = make_classification(n_samples=100,    # 샘플 수\n",
+    "                           n_features=5,     # 특성 수\n",
+    "                           n_informative=3,  # 유용한 특성 수\n",
+    "                           n_redundant=0,    # 중복된 특성 수\n",
+    "                           random_state=42)  # 랜덤 시드\n",
+    "\n",
+    "# Decision Tree 생성\n",
+    "model = DecisionTreeClassifier(max_depth=3)\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "# 예측 정확도 측정\n",
+    "accuracy = (model.predict(X) == y).mean()\n",
+    "print(f'Accuracy: {accuracy:.2f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Threshold: 5.0, Gini Impurity: 0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def gini_impurity(y):\n",
+    "    \"\"\"\n",
+    "    지니 불순도 계산 함수\n",
+    "    y: 클래스 레이블 리스트 (0 또는 1)\n",
+    "    \"\"\"\n",
+    "    n = len(y)\n",
+    "    if n == 0:\n",
+    "        return 0  # 빈 리스트의 경우 지니 불순도 0\n",
+    "    p1 = np.sum(y) / n  # 클래스 1의 비율\n",
+    "    p0 = 1 - p1         # 클래스 0의 비율\n",
+    "    return 1 - p1**2 - p0**2\n",
+    "\n",
+    "def find_best_threshold(X, y):\n",
+    "    \"\"\"\n",
+    "    Numeric Data에서 최적의 임계값과 지니 불순도를 반환하는 함수\n",
+    "    X: 특성 값 리스트\n",
+    "    y: 클래스 레이블 리스트 (0 또는 1)\n",
+    "    \"\"\"\n",
+    "    # 데이터를 X를 기준으로 정렬\n",
+    "    sorted_indices = np.argsort(X)\n",
+    "    X_sorted = np.array(X)[sorted_indices]\n",
+    "    y_sorted = np.array(y)[sorted_indices]\n",
+    "    \n",
+    "    best_gini = 1  # 초기값으로 최대 지니 불순도 설정\n",
+    "    best_threshold = None\n",
+    "    \n",
+    "    # 가능한 임계값(두 값 사이의 중간값)을 찾음\n",
+    "    for i in range(1, len(X_sorted)):\n",
+    "        threshold = (X_sorted[i-1] + X_sorted[i]) / 2\n",
+    "        \n",
+    "        # 해당 임계값을 기준으로 데이터를 좌/우로 분할\n",
+    "        left_labels = y_sorted[:i]\n",
+    "        right_labels = y_sorted[i:]\n",
+    "        \n",
+    "        # 좌/우 그룹의 지니 불순도 계산\n",
+    "        left_gini = gini_impurity(left_labels)\n",
+    "        right_gini = gini_impurity(right_labels)\n",
+    "        \n",
+    "        # 가중 평균 지니 불순도 계산\n",
+    "        total_samples = len(y_sorted)\n",
+    "        weighted_gini = (len(left_labels) / total_samples) * left_gini + (len(right_labels) / total_samples) * right_gini\n",
+    "        \n",
+    "        # 더 낮은 지니 불순도를 찾으면 갱신\n",
+    "        if weighted_gini < best_gini:\n",
+    "            best_gini = weighted_gini\n",
+    "            best_threshold = threshold\n",
+    "    \n",
+    "    return best_threshold, best_gini\n",
+    "\n",
+    "\n",
+    "# 예시 데이터\n",
+    "X = [7.5, 5.9, 6.5, 4.1, 2.3, 9.1]  # 특성 값 (수면 시간)\n",
+    "y = [1, 0, 0, 1, 1, 0]  # 클래스 레이블 (커피 마신 여부)\n",
+    "\n",
+    "threshold, gini = find_best_threshold(X, y)\n",
+    "print(f\"Best Threshold: {threshold}, Gini Impurity: {gini}\")\n"
    ]
   },
   {
