--- a/Data_science/Titanic_data/Random_Forests_Practice.ipynb
+++ b/Data_science/Titanic_data/Random_Forests_Practice.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "import numpy as np\n",
+    "\n",
+    "\n",
     "class RandomForestClassifier:\n",
     "    def __init__(self, n_estimators=100, max_depth=None, max_features='sqrt', max_samples=None):\n",
     "        self.n_estimators = n_estimators\n",
@@ -72,23 +74,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train accuracy: 0.8159371492704826\n"
+      "train accuracy: 0.9236812570145904\n"
      ]
     }
    ],
    "source": [
-    "rf = RandomForestClassifier(n_estimators=50, max_depth=3, max_features=2)\n",
+    "rf = RandomForestClassifier(n_estimators=50, max_depth=10, max_features=2)\n",
     "rf.fit(X, y)\n",
     "y_pred = rf.predict(X)\n",
+    "\n",
     "# train accuracy 출력\n",
     "print(\"train accuracy:\", (y==y_pred).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train accuracy: 0.8821548821548821\n",
+      "out-of-bag score: 0.8305274971941639\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=50, max_depth=None, min_samples_split=20, max_features=2, oob_score=True)\n",
+    "rf.fit(X, y)\n",
+    "y_pred = rf.predict(X)\n",
+    "\n",
+    "print(\"train accuracy:\", (y==y_pred).mean())\n",
+    "print(\"out-of-bag score:\", rf.oob_score_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv(\"test.csv\")\n",
+    "\n",
+    "test['Age'] = test['Age'].fillna(train['Age'].mean())\n",
+    "\n",
+    "features = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Sex', 'Embarked']\n",
+    "X_test = pd.get_dummies(test[features], drop_first=True).values\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "with open(\"rf_result.csv\", \"w\") as f:\n",
+    "    f.write(\"PassengerId,Survived\\n\")\n",
+    "\n",
+    "    for a, b in zip(test['PassengerId'].values, y_pred):\n",
+    "        f.write(f\"{a},{b}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\iinmv\\AppData\\Local\\Temp\\ipykernel_21840\\759077888.py:39: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  combined['Age'].fillna(combined['Age'].median(), inplace=True)\n",
+      "C:\\Users\\iinmv\\AppData\\Local\\Temp\\ipykernel_21840\\759077888.py:42: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  combined['Embarked'].fillna(combined['Embarked'].mode()[0], inplace=True)\n",
+      "C:\\Users\\iinmv\\AppData\\Local\\Temp\\ipykernel_21840\\759077888.py:45: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  combined['Fare'].fillna(combined['Fare'].median(), inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Read the training and test data\n",
+    "train = pd.read_csv(\"train.csv\")\n",
+    "test = pd.read_csv(\"test.csv\")\n",
+    "\n",
+    "# Add 'Survived' column to the test set for consistent processing\n",
+    "test['Survived'] = np.nan\n",
+    "\n",
+    "# Combine the datasets\n",
+    "combined = pd.concat([train, test], ignore_index=True, sort=False)\n",
+    "\n",
+    "# Extract titles from names\n",
+    "def extract_title(name):\n",
+    "    title_search = re.search(' ([A-Za-z]+)\\.', name)\n",
+    "    if title_search:\n",
+    "        return title_search.group(1)\n",
+    "    return \"\"\n",
+    "\n",
+    "combined['Title'] = combined['Name'].apply(extract_title)\n",
+    "\n",
+    "# Simplify titles\n",
+    "title_mapping = {\n",
+    "    \"Mlle\": \"Miss\", \"Ms\": \"Miss\", \"Lady\": \"Mrs\", \"Mme\": \"Mrs\",\n",
+    "    \"Countess\": \"Mrs\", \"Dona\": \"Mrs\", \"Dr\": \"Rare\", \"Rev\": \"Rare\",\n",
+    "    \"Col\": \"Rare\", \"Major\": \"Rare\", \"Sir\": \"Rare\", \"Jonkheer\": \"Rare\",\n",
+    "    \"Don\": \"Rare\", \"Capt\": \"Rare\"\n",
+    "}\n",
+    "combined['Title'] = combined['Title'].replace(title_mapping)\n",
+    "\n",
+    "# Fill missing 'Age' values based on median age for each title\n",
+    "combined['Age'] = combined.groupby('Title')['Age'].transform(lambda x: x.fillna(x.median()))\n",
+    "\n",
+    "# Fill any remaining missing 'Age' values with overall median\n",
+    "combined['Age'].fillna(combined['Age'].median(), inplace=True)\n",
+    "\n",
+    "# Fill missing 'Embarked' with the most common port\n",
+    "combined['Embarked'].fillna(combined['Embarked'].mode()[0], inplace=True)\n",
+    "\n",
+    "# Fill missing 'Fare' values with the median fare\n",
+    "combined['Fare'].fillna(combined['Fare'].median(), inplace=True)\n",
+    "\n",
+    "# Extract deck information from 'Cabin'\n",
+    "combined['Deck'] = combined['Cabin'].str[0]\n",
+    "combined['Deck'] = combined['Deck'].fillna('U')  # U for Unknown\n",
+    "\n",
+    "# Create 'FamilySize' feature\n",
+    "combined['FamilySize'] = combined['SibSp'] + combined['Parch'] + 1\n",
+    "\n",
+    "# Create 'IsAlone' feature\n",
+    "combined['IsAlone'] = 1  # Initialize to 1 (true)\n",
+    "combined.loc[combined['FamilySize'] > 1, 'IsAlone'] = 0  # Set to 0 if family size >1\n",
+    "\n",
+    "# Categorize 'Age' into bands\n",
+    "combined['AgeBand'] = pd.cut(combined['Age'], 5)\n",
+    "age_label = LabelEncoder()\n",
+    "combined['AgeBand'] = age_label.fit_transform(combined['AgeBand'])\n",
+    "\n",
+    "# Categorize 'Fare' into bands\n",
+    "combined['FareBand'] = pd.qcut(combined['Fare'], 4)\n",
+    "fare_label = LabelEncoder()\n",
+    "combined['FareBand'] = fare_label.fit_transform(combined['FareBand'])\n",
+    "\n",
+    "# Drop unnecessary columns\n",
+    "combined.drop(['Name', 'Ticket', 'Cabin'], axis=1, inplace=True)\n",
+    "\n",
+    "# One-Hot Encoding for categorical variables\n",
+    "combined = pd.get_dummies(combined, columns=['Sex', 'Embarked', 'Title', 'Deck'], drop_first=True)\n",
+    "\n",
+    "# Split back into train and test sets\n",
+    "train = combined[combined['Survived'].notnull()]\n",
+    "test = combined[combined['Survived'].isnull()].drop(['Survived'], axis=1)\n",
+    "\n",
+    "# Define features and target variable\n",
+    "features = train.columns.drop(['Survived', 'PassengerId'])\n",
+    "X = train[features]\n",
+    "y = train['Survived'].astype(int)\n",
+    "X_test = test[features]\n",
+    "\n",
+    "# Initialize and train the Random Forest classifier\n",
+    "rf = RandomForestClassifier(\n",
+    "    n_estimators=100,\n",
+    "    max_depth=5,\n",
+    "    random_state=42\n",
+    ")\n",
+    "rf.fit(X, y)\n",
+    "\n",
+    "# Predict survival on the test set\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "# Create submission DataFrame\n",
+    "submission = pd.DataFrame({\n",
+    "    'PassengerId': test['PassengerId'].astype(int),\n",
+    "    'Survived': y_pred.astype(int)\n",
+    "})\n",
+    "\n",
+    "# Write the submission DataFrame to a CSV file\n",
+    "submission.to_csv('submission1.csv', index=False)\n"
    ]
   },
   {
