--- a/Data_science/Linear_Regression.ipynb
+++ b/Data_science/Linear_Regression.ipynb
@@ -216,6 +216,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Cost: 462.169452\n",
+      "Epoch 100, Cost: 0.314627\n",
+      "Epoch 200, Cost: 0.257291\n",
+      "Epoch 300, Cost: 0.210403\n",
+      "Epoch 400, Cost: 0.172060\n",
+      "Epoch 500, Cost: 0.140705\n",
+      "Epoch 600, Cost: 0.115063\n",
+      "Epoch 700, Cost: 0.094095\n",
+      "Epoch 800, Cost: 0.076947\n",
+      "Epoch 900, Cost: 0.062925\n",
+      "Final Weights (W):\n",
+      "[[1.82507301]\n",
+      " [2.06552412]\n",
+      " [2.20040963]]\n",
+      "Final Bias (b): [1.07803247]\n",
+      "Prediction for X_test: [[32.28373952]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def linear_regression(X, y, lr=0.01, num_epochs=1000):\n",
+    "    \"\"\"\n",
+    "    n차원의 입력 행렬 X와 출력 벡터 y에 대해 선형 회귀를 수행하는 함수.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    X (numpy array): 입력 데이터 (샘플 수 x 특성 수)\n",
+    "    y (numpy array): 출력 데이터 (샘플 수 x 1)\n",
+    "    lr (float): 학습률 (learning rate), default = 0.01\n",
+    "    num_epochs (int): 학습 반복 횟수 (epoch), default = 1000\n",
+    "    \n",
+    "    Returns:\n",
+    "    W (numpy array): 학습된 가중치 (특성 수 x 1)\n",
+    "    b (float): 학습된 편향 (bias)\n",
+    "    \"\"\"\n",
+    "    # 데이터 차원\n",
+    "    n_samples, n_features = X.shape\n",
+    "    \n",
+    "    # 가중치(W)와 편향(b) 초기화\n",
+    "    W = np.random.randn(n_features, 1)  # 특성 수에 맞는 가중치 초기화\n",
+    "    b = np.random.randn(1)              # 편향 초기화\n",
+    "    \n",
+    "    # 경사 하강법을 통한 학습 과정\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # 예측값 계산 (XW + b)\n",
+    "        y_pred = np.dot(X, W) + b\n",
+    "        \n",
+    "        # 손실 함수 (MSE) 계산\n",
+    "        cost = np.mean((y_pred - y) ** 2)\n",
+    "        \n",
+    "        # 가중치(W)와 편향(b)에 대한 그래디언트 계산\n",
+    "        W_grad = (2 / n_samples) * np.dot(X.T, (y_pred - y))  # W에 대한 gradient\n",
+    "        b_grad = (2 / n_samples) * np.sum(y_pred - y)         # b에 대한 gradient\n",
+    "        \n",
+    "        # 가중치와 편향 업데이트\n",
+    "        W -= lr * W_grad\n",
+    "        b -= lr * b_grad\n",
+    "        \n",
+    "        # 100 에포크마다 비용 출력\n",
+    "        if epoch % 100 == 0:\n",
+    "            print(f'Epoch {epoch}, Cost: {cost:.6f}')\n",
+    "    \n",
+    "    return W, b\n",
+    "\n",
+    "# 사용 예시\n",
+    "\n",
+    "# 입력 데이터 (5개의 샘플, 3개의 특성)\n",
+    "X = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6],\n",
+    "              [7, 8, 9],\n",
+    "              [2, 3, 4],\n",
+    "              [6, 7, 8]])\n",
+    "\n",
+    "# 출력 데이터\n",
+    "y = np.array([[14],\n",
+    "              [32],\n",
+    "              [50],\n",
+    "              [20],\n",
+    "              [44]])\n",
+    "\n",
+    "# 선형 회귀 수행\n",
+    "W, b = linear_regression(X, y, lr=0.001, num_epochs=1000)\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(f'Final Weights (W):\\n{W}')\n",
+    "print(f'Final Bias (b): {b}')\n",
+    "\n",
+    "# 새로운 데이터 예측\n",
+    "X_test = np.array([[3, 5, 7]])  # 새로운 입력 데이터\n",
+    "y_test_pred = np.dot(X_test, W) + b\n",
+    "print(f'Prediction for X_test: {y_test_pred}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
